--- a/project1.css
+++ b/project1.css
@@ -4,7 +4,7 @@
 }
 body{
     list-style: none;
-    background-color: rgb(255, 250, 250);
+    background-color: rgb(255 255 255 / 2%);
     font-family:Cambria ;
 }
 .header{
